<resources>
    <string name="app_name">Habitivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login">Login</string>
    <string name="follows">Follow</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_habit">Add Habit</string>
    <string name="title_activity_add_event">Add Event</string>
    <string name="mon_switch">Mon</string>
    <string name="tues_switch">Tues</string>
    <string name="weds_switch">Weds</string>
    <string name="thurs_switch">Thur</string>
    <string name="fri_switch">Fri</string>
    <string name="sat_switch">Sat</string>
    <string name="sun_switch">Sun</string>
    <string name="comp_false">Complete Event</string>
    <string name="comp_true">Completed (View)</string>
    <string name="eventPic">eventPic</string>
    <string name="Map">map</string>
    <string name="viewHabit">View Habit</string>
    <string name="title_activity_follow_request">FollowRequest</string>
    <string name="pendingFollows">Pending Follows:</string>
    <string name="requests">Follower Requests:</string>
    <string name="followers">Followers:</string>
    <string name="find">Find a User</string>
    <string name="follow">Follow</string>
    <string name="pending">Pending Approval</string>
    <string name="isFollower">Following You</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="title_activity_login_user">LoginUser</string>
    <string name="NewUser">New User</string>
    <string name="title_activity_habit_events">HabitEvents</string>
    <string name="search">Filter</string>
    <string name="hint">keywords</string>
    <string name="habithint">Event filter</string>
    <string name="addEvent">Add Event</string>
    <string name="editEvent">Edit Event</string>
    <string name="locationadd">Add Location</string>
    <string name="comment">Comment</string>
    <string name="userImage">userImage</string>
    <string name="selectday">Select Date</string>
    <string name="comp_v1">Completed:</string>
    <string name="save">save</string>
    <string name="editlocation">Edit Location</string>
    <string name="Reason">Reason for Habit:</string>
    <string name="start">Start:</string>
    <string name="habitName">Habit title</string>
    <string name="daysofWeek">Days of the Week:</string>
    <string name="colour">Colour?</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="todayhabit">Today\'s Habits:</string>
    <string name="today">Today</string>
    <string name="all">All</string>
    <string name="history">History</string>
</resources>
