<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/editscoordinator"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addComment">

        <TextView
            android:id="@+id/location"
            android:layout_width="194dp"
            android:layout_height="21dp"
            android:layout_gravity="start|top"
            android:layout_margin="8dp"
            android:textSize="14sp"
            android:textStyle="italic"
            tools:text="Location Data" />

        <Button
            android:id="@+id/addlocation"
            android:layout_width="171dp"
            android:layout_height="35dp"
            android:layout_gravity="top|end"
            android:fontFamily="sans-serif"
            android:text="@string/locationadd"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="213dp" />

    </android.support.design.widget.CoordinatorLayout>

    <ImageButton
        android:id="@+id/userImage"
        android:layout_width="367dp"
        android:layout_height="237dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/userImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventEditDelete"
        app:srcCompat="@drawable/ic_menu_camera" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="459dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editscoordinator" />

    <EditText
        android:id="@+id/addComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/comment"
        android:inputType="text|textPersonName"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImage" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/eventEditDelete"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/delete2"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:text="@string/addEvent"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="271dp" />

        <TextView
            android:id="@+id/habitEvent"
            android:layout_width="249dp"
            android:layout_height="33dp"
            android:layout_gravity="start|top"
            android:layout_margin="8dp"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:layout_editor_absoluteY="16dp"
            tools:text="ExampleHabit 20Chars Event:" />

    </android.support.design.widget.CoordinatorLayout>

</android.support.constraint.ConstraintLayout>
