<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="main.habitivity.FollowRequest"
    tools:showIn="@layout/activity_follow_request">

    <TextView
        android:id="@+id/pendingFollows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/changa_one"
        android:text="@string/pendingFollows"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/pendingList"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/pendingList"
        android:layout_width="295dp"
        android:layout_height="179dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/followerRequests"
        app:layout_constraintStart_toStartOf="@+id/followerRequests"
        app:layout_constraintTop_toBottomOf="@+id/pendingFollows"
        app:layout_constraintVertical_bias="0.0">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/followerRequests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/changa_one"
        android:text="@string/requests"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/requestsList"
        tools:layout_editor_absoluteY="240dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/requestsList"
        android:layout_width="346dp"
        android:layout_height="176dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/followerRequests"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/follower_requests">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/followers"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/changa_one"
        android:text="@string/followers"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/followers"
        app:layout_constraintStart_toStartOf="@+id/followers"
        app:layout_constraintTop_toBottomOf="@+id/requestsList"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/followers"
        android:layout_width="237dp"
        android:layout_height="286dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="492dp">

    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>
